--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "^6.0.3",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
+    "@ngrx/router-store": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
     "core-js": "^2.5.4",
+    "ngrx-store-freeze": "^0.2.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
