--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
+      - run: sudo npm install -g ngh
       - run: yarn install
 
       - save_cache:
@@ -35,3 +35,11 @@ jobs:
         
       # run tests!
       - run: yarn test
+
+      - run:
+        name: Generate Build
+        command: ng build --prod --base-href "https://your-name.github.io/coffee-time-ui/"
+
+      - run:
+            command: |
+              ngh --token $TOKEN        
