--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: sudo npm install -g ngh
+      - run: sudo yarn install -g ngh
+      - run: sudo yarn install -g @angular/cli
       - run: yarn install
 
       - save_cache:
