--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: sudo yarn install -g ngh
-      - run: sudo yarn install -g @angular/cli
-      - run: yarn install
+      - run: sudo npm install -g ngh
+      - run: sudo npm install -g @angular/cli
+      - run: npm install
 
       - save_cache:
           paths:
@@ -35,7 +35,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: yarn test
+      - run: npm test
 
       - run:
           name: Generate Build
