--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: sudo npm install -g ngh
-      - run: sudo npm install -g @angular/cli
+      - run: npm install -g openode
       - run: npm install
 
       - save_cache:
@@ -39,8 +38,6 @@ jobs:
 
       - run:
           name: Generate Build
-          command: ng build --prod --base-href "https://your-name.github.io/coffee-time-ui/"
-
-      - run:
-            command: |
-              ngh --token $TOKEN        
+          command: ng build --prod"
+      - run: openode deploy -t $OPENODE_TOKEN -s coffee-time-ui
+  
