--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,6 @@ jobs:
 
       - run:
           name: Generate Build
-          command: npm run build:prod"
+          command: npm run build:prod
       - run: firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
   
