--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build:prod": "ng build --prod",
     "test": "ng test --watch=false",
-    "test:watch": "ng test",
+    "watch:test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "precommit": "lint-staged"
