--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,6 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: sudo npm install -g firebase-tools
       - run: npm install
 
       - save_cache:
@@ -39,5 +38,5 @@ jobs:
       - run:
           name: Generate Build
           command: npm run build:prod
-      - run: firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+      - run: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
   
