--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "~8.9.4",
     "@types/ramda": "^0.25.24",
     "codelyzer": "~4.2.1",
+    "firebase-tools": "^3.19.1",
     "husky": "^0.14.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
